<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtViewTIdeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/tideLabel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtViewSpring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/todaySpring" />

        <TextView
            android:id="@+id/txtViewNeap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/todayNeap" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtViewCurrentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/currentdate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtViewCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="20dip"
                android:text="@string/currenttime" />

            <DigitalClock
                android:id="@+id/digitalClock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6699CC" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/spring" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/adLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
                    <RelativeLayout
            android:id="@+id/adonContainerView"
         
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />


    </LinearLayout>

</LinearLayout>